syntax = "proto3";

service NoteService {
  rpc List (Empty) returns (NoteList);
  rpc ListStream (Empty) returns (stream Note);
  rpc Insert (Note) returns (Note);
  rpc InsertStream (stream Note) returns (NoteList);
  rpc PassAround (stream Note) returns (stream Note);
}

message Empty {}

message Note {
  string id = 1;
  string title = 2;
  string content = 3;
}

message NoteList {
  repeated Note notes = 1;
}
